--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,4 +1,6 @@
-<ul *ngFor="let brand of brands" class="list-group">
-  <li class="list-group-item">{{brand.name}}</li>
+<ul class="list-group">
+  <li class="list-group-item">All Brands</li>
+  <li (click)="setCurrentBrands(brand)" routerLink="/rentals/brand/{{brand.id}}" *ngFor="let brand of brands" [class]="getCurrentBrandClass(brand)">{{brand.name}}</li>
 </ul>
 
+<h5 *ngIf="currentBrand">{{currentBrand.name}}</h5>
