--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -1,6 +1,7 @@
 <table class="table">
 <thead>
   <th>Car Name</th>
+  <th>Color Name</th>
   <th>Customer Name</th>
   <th>Rent Date</th>
   <th>Return Date</th>
@@ -8,6 +9,7 @@
 <tbody>
   <tr *ngFor="let rental of rentals">
     <td>{{rental.brandName}}</td>
+    <td>{{rental.colorName}}</td>
     <td>{{rental.customer}}</td>
     <td>{{rental.rentDate}}</td>
     <td>{{rental.returnDate}}</td>
