--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,1 +1,15 @@
-<p>car works!</p>
+<div class="card-group">
+  <div class="card" *ngFor="let carImage of carImages">
+    <img src="{{carImage.imagePath}}" class="card-img-top" />
+    <div class="card-body">
+      <h5 class="card-title">{{carImage.carId}}</h5>
+      <p class="card-text">
+        <!-- brand = {{car.brandName}}
+        color = {{car.colorName}} -->
+      </p>
+      <p class="card-text">
+        <small class="text-muted">{{carImage.date}}</small>
+      </p>
+    </div>
+  </div>
+</div>
