--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,8 @@
-<div class="container">
+<div id="container" class="effect aside-float aside-bright mainnav-lg">
   <app-navi></app-navi>
-  <br>
-  <div class="row">
-    <div class="col-md-3">
-      <app-brand></app-brand>
-      <br>
-      <app-color></app-color>
-    </div>
-    <div class="col-md-7">
+  <div class="boxed">
+    <div id="content-container">
       <router-outlet></router-outlet>
     </div>
   </div>
 </div>
-
