--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,6 +1,36 @@
-<ul class="list-group">
-  <li class="list-group-item">All Brands</li>
-  <li (click)="setCurrentBrands(brand)" routerLink="/rentals/brand/{{brand.id}}" *ngFor="let brand of brands" [class]="getCurrentBrandClass(brand)">{{brand.name}}</li>
-</ul>
+<br>
+<div id="page-head">
+  <div id="page-title">
+    <h4 class="page-header text-overflow text-center">Recap Project Brands Page</h4>
+  </div>
+</div>
 
-<h5 *ngIf="currentBrand">{{currentBrand.name}}</h5>
+<div id="page-content">
+
+  <hr class="new-section-sm bord-no">
+  <div class="row">
+    <div class="col-lg-12 col-lg-offset-2">
+
+      <div class="panel panel-body text-center">
+        <div class="panel-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-3">
+                <ul class="list-group">
+                  <li [class]="setCurrentBandClass('brands')" routerLink="/brands">All Brands</li>
+                  <li (click)="setCurrentBrands(brand)" routerLink="/brand/{{brand.id}}"
+                    *ngFor="let brand of brands" [class]='setCurrentBandClass("brand/" + brand.id)'>{{brand.name}}</li>
+                </ul>
+
+                <h5 *ngIf="currentBrand">{{currentBrand.name}}</h5>
+              </div>
+              <div class="col-lg-9">
+                <app-car></app-car>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
