--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,7 +1,35 @@
-<ul class="list-group">
-  <li class="list-group-item">All Colors</li>
-  <li (click)="setCurrentColor(color)" routerLink="/rentals/color/{{color.id}}" *ngFor="let color of colors" [class]="getCurrentColorClass(color)">{{color.name}}</li>
-</ul>
+<br>
+<div id="page-head">
+  <div id="page-title">
+    <h4 class="page-header text-overflow text-center">Recap Project Brands Page</h4>
+  </div>
+</div>
 
-<h5 *ngIf="currentColor">{{currentColor.name}}</h5>
+<div id="page-content">
 
+  <hr class="new-section-sm bord-no">
+  <div class="row">
+    <div class="col-lg-12 col-lg-offset-2">
+
+      <div class="panel panel-body text-center">
+        <div class="panel-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-3">
+                <ul class="list-group">
+                  <li [class]="getCurrentColorClass('colors')" routerLink="/colors">All Colors</li>
+                  <li (click)="setCurrentColor(color)" routerLink="/color/{{color.id}}" *ngFor="let color of colors" [class]='getCurrentColorClass("color/" + color.id)'>{{color.name}}</li>
+                </ul>
+
+                <h5 *ngIf="currentColor">{{currentColor.name}}</h5>
+              </div>
+              <div class="col-lg-9">
+                <app-car></app-car>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
