--- a/src/app/components/car-image/car-image.component.html
+++ b/src/app/components/car-image/car-image.component.html
@@ -1,8 +1,49 @@
-<div class="form-group">
+<br>
+<div id="page-head">
+  <div id="page-title">
+    <h4 class="page-header text-overflow text-center">Recap Project Car Images Page</h4>
+  </div>
+</div>
+
+<div id="page-content">
+
+  <hr class="new-section-sm bord-no">
   <div class="row">
-    <div *ngFor="let carImage of carImages" class="col-md-6">
-      <img src="assets/img/{{carImage.imagePath}}" class="figure-img img-fluid rounded" width="600px" height="600px">
+    <div class="col-lg-12 col-lg-offset-2">
+
+      <div class="panel panel-body text-center">
+        <div class="panel-body">
+          <div class="container">
+            <div class="form-group">
+              <div class="row">
+                <div class="col-md-4">
+                  <label for="rentDate">Rent Date</label>
+                <input type="date" id="rentDate" class="form-control">
+                </div>
+                <div class="col-md-4">
+                  <label for="returnDate">Return Date</label>
+                <input type="date" id="returnDate" class="form-control">
+                </div>
+                <div class="col-auto">
+                  <br>
+                  <button class="btn btn-success" id="rentACar">Rent</button>
+                </div>
+              </div>
+            </div>
+            <hr>
+            <div class="form-group">
+              <div class="row">
+                <div *ngFor="let carImage of carImages" class="col-md-6">
+                  <img src="assets/img/{{carImage.imagePath}}" class="figure-img img-fluid rounded">
+                </div>
+              </div>
+              </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  </div>
+</div>
+
+
 
