--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -1,18 +1,35 @@
-<table class="table">
-<thead>
-  <th>Car Name</th>
-  <th>Color Name</th>
-  <th>Customer Name</th>
-  <th>Rent Date</th>
-  <th>Return Date</th>
-</thead>
-<tbody>
-  <tr *ngFor="let rental of rentals">
-    <td (click)="setCurrentCar(rental)" routerLink="/car/{{rental.carId}}">{{rental.brandName}}</td>
-    <td>{{rental.colorName}}</td>
-    <td>{{rental.customer}}</td>
-    <td>{{rental.rentDate}}</td>
-    <td>{{rental.returnDate}}</td>
-  </tr>
-</tbody>
-</table>
+<div class="container">
+  <div class="form-group">
+    <div class="mb-3">
+      <label for="filterText" class="form-label">Car search</label>
+      <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="enter search word">
+    </div>
+    <div *ngIf="filterText.length>2" class="alert alert-warning">
+      you've {{filterText}} searching
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-9">
+      <table class="table">
+        <thead>
+          <th>Car Name</th>
+          <th>Color Name</th>
+          <th>Customer Name</th>
+          <th>Rent Date</th>
+          <th>Return Date</th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let rental of rentals |rentalPipe:filterText">
+            <td (click)="setCurrentCar(rental)" routerLink="/car/{{rental.carId}}">{{rental.brandName}}</td>
+            <td>{{rental.colorName}}</td>
+            <td>{{rental.customer}}</td>
+            <td>{{rental.rentDate}}</td>
+            <td>{{rental.returnDate}}</td>
+          </tr>
+        </tbody>
+        </table>
+    </div>
+  </div>
+
+</div>
+
