--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -11,9 +11,14 @@
   <div class="row">
     <div class="col-lg-12 col-lg-offset-2">
 
-      <div class="panel panel-body text-center">
+      <div class="panel panel-body">
         <div class="panel-body">
           <div class="container">
+            <div class="form-group mb-3">
+              <button routerLink="/colors/add" class="btn btn-primary">
+                Color Add
+              </button>
+            </div>
             <div class="row">
               <div class="col-lg-3">
                 <div class="mb-3">
@@ -23,12 +28,20 @@
                 <div *ngIf="filterText.length>2" class="alert alert-warning">
                   you've {{filterText}} searching
                 </div>
-
-                <ul class="list-group">
-                  <li [class]="getCurrentColorClass('colors')" routerLink="/colors">All Colors</li>
-                  <li (click)="setCurrentColor(color)" routerLink="/color/{{color.id}}" *ngFor="let color of colors |colorFilterPipe:filterText" [class]='getCurrentColorClass("color/" + color.id)'>{{color.name}}</li>
-                </ul>
-
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th>Color Name</th>
+                      <th>Process</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr (click)="setCurrentColor(color)" *ngFor="let color of colors |colorFilterPipe:filterText" [class]='getCurrentColorClass("color/" + color.id)'>
+                        <td routerLink="/color/{{color.id}}">{{color.name}}</td>
+                        <td><button routerLink="/colors/{{color.id}}" class="btn btn-warning">Edit</button></td>
+                    </tr>
+                  </tbody>
+                </table>
                 <h5 *ngIf="currentColor">{{currentColor.name}}</h5>
               </div>
               <div class="col-lg-9">
