some fixes for host

--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -9,19 +9,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a [class]="getCurrentNaviClass('home')" href="/home">Home</a>
+            <a [class]="getCurrentNaviClass('home')" href="#/home">Home</a>
           </li>
           <li class="nav-item">
-            <a [class]="getCurrentNaviClass('brands')" href="/brands">Brands</a>
+            <a [class]="getCurrentNaviClass('brands')" href="#/brands">Brands</a>
           </li>
           <li class="nav-item">
-            <a [class]="getCurrentNaviClass('cars')" href="/cars">Cars</a>
+            <a [class]="getCurrentNaviClass('cars')" href="#/cars">Cars</a>
           </li>
           <li class="nav-item">
-            <a [class]="getCurrentNaviClass('colors')" href="/colors">Colors</a>
+            <a [class]="getCurrentNaviClass('colors')" href="#/colors">Colors</a>
           </li>
           <li class="nav-item">
-            <a [class]="getCurrentNaviClass('rentals')" href="/rentals">Rentals</a>
+            <a [class]="getCurrentNaviClass('rentals')" href="#/rentals">Rentals</a>
           </li>
         </ul>
         <form class="d-flex">
